label vu filter, refactoring
